force-app/main/default/objects/InsurancePolicyTransaction/InsurancePolicyTransaction.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>