force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_agencia__c.field-meta.xml
<CustomField>
    <fullName>braseg_agencia__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.braseg_agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agência</label>
    <type>Text</type>
</CustomField>