force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_banco__c.field-meta.xml
<CustomField>
    <fullName>braseg_banco__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.FinServ__BankNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banco</label>
    <type>Text</type>
</CustomField>