force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_cnpj_empresa__c.field-meta.xml
<CustomField>
    <fullName>braseg_cnpj_empresa__c</fullName>
    <formula>InsurancePolicy.Nome_empresa__r.braseg_cpf_cnpj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Empresa</label>
    <type>Text</type>
</CustomField>