force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_cnpj_holding__c.field-meta.xml
<CustomField>
    <fullName>braseg_cnpj_holding__c</fullName>
    <formula>InsurancePolicy.NameInsured.braseg_cpf_cnpj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Holding</label>
    <type>Text</type>
</CustomField>