force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_cod_benef__c.field-meta.xml
<CustomField>
    <fullName>braseg_cod_benef__c</fullName>
    <formula>braseg_id_proposta__r.braseg_cod_benef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio</label>
    <type>Text</type>
</CustomField>