force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_cod_operacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_cod_operacao__c</fullName>
    <label>Codigo Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>TEP</fullName>
            </value>
            <value>
                <fullName>TEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>