force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_compet__c.field-meta.xml
<CustomField>
    <fullName>braseg_compet__c</fullName>
    <description>Periodo da Fatura</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Periodo da Fatura</inlineHelpText>
    <label>Competência</label>
    <length>7</length>
    <type>Text</type>
</CustomField>