force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_conta__c.field-meta.xml
<CustomField>
    <fullName>braseg_conta__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.braseg_conta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>