force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_cpf_participante__c.field-meta.xml
<CustomField>
    <fullName>braseg_cpf_participante__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.braseg_cpf_cnpj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF do Participante</label>
    <type>Text</type>
</CustomField>