force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_descr_mov__c.field-meta.xml
<CustomField>
    <fullName>braseg_descr_mov__c</fullName>
    <description>Descrição Movimento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descrição Movimento</inlineHelpText>
    <label>Descrição Movimento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>