force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_dt_credito__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_credito__c</fullName>
    <description>Data do Credito</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data do Credito</inlineHelpText>
    <label>Data Credito</label>
    <type>Date</type>
</CustomField>