force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_dt_oper__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_oper__c</fullName>
    <description>Data Operação</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Operação</inlineHelpText>
    <label>Data Operação</label>
    <type>Date</type>
</CustomField>