force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_dt_pagamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_pagamento__c</fullName>
    <description>Data de Pagamento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data de Pagamento</inlineHelpText>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>