force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_dt_quitacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_quitacao__c</fullName>
    <description>Data de Efetivação do Pagamento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data de Efetivação do Pagamento</inlineHelpText>
    <label>Data de Quitação</label>
    <type>Date</type>
</CustomField>