force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_dt_venda__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_venda__c</fullName>
    <description>Data Venda</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Venda</inlineHelpText>
    <label>Data Venda</label>
    <type>Date</type>
</CustomField>