force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_entidade__c.field-meta.xml
<CustomField>
    <fullName>braseg_entidade__c</fullName>
    <description>Trata-se da entidade de entra ou saída da reserva</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Trata-se da entidade de entra ou saída da reserva</inlineHelpText>
    <label>Entidade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>