force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_id_proposta__c.field-meta.xml
<CustomField>
    <fullName>braseg_id_proposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Proposta</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Insurance Policy Transactions</relationshipLabel>
    <relationshipName>Insurance_Policy_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>