force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_itpcta__c.field-meta.xml
<CustomField>
    <fullName>braseg_itpcta__c</fullName>
    <description>IDENTIFICADOR DE PLANO (I = FUNDO INOMINADO, B = BASICO, F = FGBE, E = EXCEDENTE FINANCEIRO</description>
    <inlineHelpText>IDENTIFICADOR DE PLANO (I = FUNDO INOMINADO, B = BASICO, F = FGBE, E = EXCEDENTE FINANCEIRO</inlineHelpText>
    <label>Tipo de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>