force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_msalrend__c.field-meta.xml
<CustomField>
    <fullName>braseg_msalrend__c</fullName>
    <description>QUANTIDADE DE COTAS</description>
    <inlineHelpText>QUANTIDADE DE COTAS</inlineHelpText>
    <label>Quantidade de Cotas</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>