force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_nm_empresa__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_empresa__c</fullName>
    <formula>InsurancePolicy.Nome_empresa__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Empresa</label>
    <type>Text</type>
</CustomField>