force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_nm_participante__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_participante__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.FirstName + &apos; &apos; +  braseg_id_proposta__r.PrimaryParticipantAccount.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participante</label>
    <type>Text</type>
</CustomField>