force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_nr_fundo_port__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_fundo_port__c</fullName>
    <description>Número representante do fundo de investimento</description>
    <inlineHelpText>Número representante do fundo de investimento</inlineHelpText>
    <label>Fundo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>