force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_nr_participante__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_participante__c</fullName>
    <formula>braseg_id_proposta__r.PrimaryParticipantAccount.braseg_matr_prevarcor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Participante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>