force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_num_propost__c.field-meta.xml
<CustomField>
    <fullName>braseg_num_propost__c</fullName>
    <formula>braseg_id_proposta__r.braseg_nr_proposta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Proposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>