force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_parte_portabilidade__c.field-meta.xml
<CustomField>
    <fullName>braseg_parte_portabilidade__c</fullName>
    <description>Participação da Portabilidade E= Empresa P=Participante (E ou P)</description>
    <inlineHelpText>Participação da Portabilidade E= Empresa P=Participante (E ou P)</inlineHelpText>
    <label>Parte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>