force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_perctrib__c.field-meta.xml
<CustomField>
    <fullName>braseg_perctrib__c</fullName>
    <description>PERCENTUAL TRIBUTAVEL DA PROPOSTA E CODIGO DE BENEFICIO</description>
    <inlineHelpText>PERCENTUAL TRIBUTAVEL DA PROPOSTA E CODIGO DE BENEFICIO</inlineHelpText>
    <label>Percentual Tributavel</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>