force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_plano_port__c.field-meta.xml
<CustomField>
    <fullName>braseg_plano_port__c</fullName>
    <description>Planos PGBL, FGB ou VGBL. (Empresariais e / ou Corporate)</description>
    <inlineHelpText>Planos PGBL, FGB ou VGBL. (Empresariais e / ou Corporate)</inlineHelpText>
    <label>Plano Portabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FBG</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>HVC</fullName>
            </value>
            <value>
                <fullName>PEM</fullName>
            </value>
            <value>
                <fullName>VGC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>