force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_responsavel__c.field-meta.xml
<CustomField>
    <fullName>braseg_responsavel__c</fullName>
    <description>Matricula do Responsavel pela Programação do Resgate</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Matricula do Responsavel pela Programação do Resgate</inlineHelpText>
    <label>Responsavel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>