force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_sld_atual__c.field-meta.xml
<CustomField>
    <fullName>braseg_sld_atual__c</fullName>
    <formula>braseg_msalrend__c  *  braseg_zcota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>