force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_tipo_transacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_tipo_transacao__c</fullName>
    <description>Tipo de movimentação de relatorio</description>
    <inlineHelpText>Tipo de movimentação de relatorio</inlineHelpText>
    <label>Tipo Transação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fatura</fullName>
            </value>
            <value>
                <fullName>Aporte</fullName>
            </value>
            <value>
                <fullName>Resgate</fullName>
            </value>
            <value>
                <fullName>Portabilidade</fullName>
            </value>
            <value>
                <fullName>Saldos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>