force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_tp_contrib__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_contrib__c</fullName>
    <description>Descrição da Contribuição</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descrição da Contribuição</inlineHelpText>
    <label>Tipo Contribuição</label>
    <length>15</length>
    <type>Text</type>
</CustomField>