force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_zcota__c.field-meta.xml
<CustomField>
    <fullName>braseg_zcota__c</fullName>
    <description>VALOR COTA DO DIA</description>
    <inlineHelpText>VALOR COTA DO DIA</inlineHelpText>
    <label>Valor Cota Dia</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>