force-app/main/default/objects/InsurancePolicyTransaction/fields/braseg_zrendim__c.field-meta.xml
<CustomField>
    <fullName>braseg_zrendim__c</fullName>
    <description>Numero do tipo de moeda</description>
    <inlineHelpText>Numero do tipo de moeda</inlineHelpText>
    <label>Numero Moeda</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>