force-app/main/default/objects/InsurancePolicyTransaction/recordTypes/BRASEG_PREV_ARCOR_APORTE.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREV_ARCOR_APORTE</fullName>
    <active>true</active>
    <label>Aporte</label>
</RecordType>