force-app/main/default/objects/InsurancePolicyTransaction/recordTypes/BRASEG_PREV_ARCOR_FATURA.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREV_ARCOR_FATURA</fullName>
    <active>true</active>
    <label>Fatura</label>
</RecordType>