force-app/main/default/objects/InsurancePolicyTransaction/recordTypes/BRASEG_PREV_ARCOR_PORTABILIDADE.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREV_ARCOR_PORTABILIDADE</fullName>
    <active>true</active>
    <label>Portabilidade</label>
</RecordType>