force-app/main/default/objects/InsurancePolicyTransaction/recordTypes/BRASEG_PREV_ARCOR_RESGATE.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREV_ARCOR_RESGATE</fullName>
    <active>true</active>
    <label>Resgate</label>
</RecordType>