force-app/main/default/objects/InsurancePolicyTransaction/recordTypes/BRASEG_PREV_ARCOR_SALDOS.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREV_ARCOR_SALDOS</fullName>
    <active>true</active>
    <label>Saldos</label>
</RecordType>