force-app/main/default/objects/InsurancePolicyTransaction/listViews/All_InsurancePolicyTransactions.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicyTransactions</fullName>
    <filterScope>Everything</filterScope>
    <label>Todas as transações da apólice do seguro</label>
</ListView>